update url success

--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -69,7 +69,7 @@
                                 <td>
                                     <form action="/update-shop" method="post" class="inputQty" >
                                         <input type="hidden" name="position" value=<%= i %>>
-                                        <input type="text" name="quantity" value="" placeholder=<%= dataCardBike[i].quantity%>>
+                                        <input type="text" name="quantity" value="" placeholder="<%= dataCardBike[i].quantity%>>"
                                         <button id='button'class="btn btn-outline-info btn-sm" name="button"><i class="fas fa-sync-alt"></i></button>
                                     </form>
                         
